--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 h1 {
-  color: navy;
+  color: navy ;
+  text-align: center ;
+}
+
+p  {
+  margin: 100px 80px 100px 150px ;
+}
+
+div{
+  margin: 100px 80px 100px 150px ;
 }
