--- a/style.css
+++ b/style.css
@@ -1,12 +1,15 @@
 h1 {
   color: navy ;
   text-align: center ;
+  border-color: red ;
 }
 
 p  {
   margin: 100px 80px 100px 150px ;
+  border-color: powderblue ;
 }
 
 div{
   margin: 100px 80px 100px 150px ;
+  border-color: black ;
 }
