--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ h1 {
 
 .row{
   background-color: #ffeee6;
-    height: 200px
+    height: 200px ;
     width: 100%;
     border: 5px solid black;
     padding: 25px;
