--- a/style.css
+++ b/style.css
@@ -4,10 +4,10 @@ h1 {
 }
 
 .row{
-  background-color: #ffeee6;
+  background-color: #ffeee6 ;
     height: 200px ;
     width: 100%;
     border: 5px solid black;
     padding: 25px;
-    margin: 25px
+    margin: 25px ;
 }
