--- a/style.css
+++ b/style.css
@@ -27,19 +27,21 @@ h1 {
 --------------------------------------------------------------------------------------------------
 
 a:link{ 
-  color: green;
-  
+  color: blue;
+  text-decoration: none;
 }
 
 a:visited{ 
-  color: blue;
+  color: red;
+  text-decoration: none;
 }
 
 a:hover{ 
   color:red;
-  
+  text-decoration: none;
 }
 
 a:active{
   color:powder-blue;
+  text-decoration: none;
 }
